@@ -2,6 +2,7 @@
 
 ## V1.0.0
 
+[IDEV RingMe-1]  Add staff controller.
 [IDEV RingMe-25] Add changelog file in the project repository.
 [IDEV RingMe-65] Add backup settings page and save method.git b
 [IDEV RingMe-72] Fix all scss-lint errors and warnings.
